MoviesListFragment - error and progess show

--- a/presentation/src/main/res/values-ru/strings.xml
+++ b/presentation/src/main/res/values-ru/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">MoviesTest</string>
     <string name="show_only_2020_year">Показать только за 2020 год.</string>
+    <string name="error_load_movies_press_button_to_retry">Ошибка загрузки, нажмите кнопку повторить</string>
+    <string name="retry_button">Повторить</string>
 </resources>
