--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MoviesTest</string>
     <string name="show_only_2020_year">Show only 2020 year</string>
+    <string name="error_load_movies_press_button_to_retry">Error load movies press button to retry</string>
+    <string name="retry_button">Retry</string>
 </resources>
